# DAA-Practica_2

./: .gitignore  CMakeLists.txt  README.md  input_tape.in  output_tape.out
.github/workflows/: main.yml
include/: Instruccion_I.hpp  cinta_entrada.hpp  cinta_salida.hpp  contador_de_programa.hpp  halt.hpp  instruccion.hpp  instruccion_interfaz.hpp  memoria.hpp  programa.hpp  ram.hpp  set_etiquetas.hpp
include/instrucciones/: IAdd.hpp  IDiv.hpp  IHalt.hpp  IJgtz.hpp  IJump.hpp  IJzero.hpp  ILoad.hpp  IMult.hpp  IRead.hpp  IStore.hpp  ISub.hpp  IWrite.hpp  cabeceras.hpp
src/: CMakeLists.txt  cinta_entrada.cpp  cinta_salida.cpp  contador_de_programa.cpp  halt.cpp  instruccion.cpp  instruccion_interfaz.cpp  main.cpp  memoria.cpp  programa.cpp  ram.cpp  set_etiquetas.cpp
src/instrucciones/: IAdd.cpp  IDiv.cpp  IHalt.cpp  IJgtz.cpp  IJump.cpp  IJzero.cpp  ILoad.cpp  IMult.cpp  IRead.cpp  IStore.cpp  ISub.cpp  IWrite.cpp
test/: CMakeLists.txt  dividir_cero.ram  elevado.ram  elevado_lineal.ram  generico.ram  prueba.ram  test.cpp
